# voxels

./: .gitignore  LICENSE  README.md
Voxelcpp/: CMakeLists.txt  FileReader.cpp  FragmentShader.glsl  RenderPolygon.cpp  RenderTriangle.cpp  RenderTriangle.h  Shader.cpp  Shader.h  Voxelcpp.code-workspace  WindowRender.cpp  WindowRender.h  build.bat  main.cpp  vertexShader.glsl
Voxelcpp/FReader/: FileReader.cpp  FileReader.h
Voxelcpp/ProjectMain/: Camera.cpp  Camera.h  MainHeader.h  WindowRender.cpp  WindowRender.h  main.cpp
Voxelcpp/Renderer/: RenderCube.cpp  RenderCube.h  RenderPolygon.cpp  RenderPolygon.h  Shader.cpp  Shader.h  Vertex.h
Voxelcpp/Shaders/: CMakeLists.txt  FragmentShader.glsl  LightFragment.glsl  VertexShader.glsl  YellowFragment.glsl
Voxelcpp/cmake/: FindGLFW.cmake  Findglad.cmake
